[package]
name = "yew_and_bevy"
version = "0.1.0"
edition = "2021"
resolver = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png", "bevy_wgpu"] }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.24", features=["x11"]}

# Dependencies for WASM only.
[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.5", default-features = false, features = ["bevy_gltf", "bevy_winit", "render", "png"] }
bevy_webgl2 = "0.5"
getrandom = { version="0.2", features=["wasm-bindgen"] }
wasm-bindgen = "0.2"